syntax = "proto3";

package meteroid.metering.v1;


import "models.proto";


message RegisterMeterRequest {
  Meter meter = 1;
  string tenant_id = 2; // TODO make more convenient ?
}

message RegisterMeterResponse {
  // optional metadata that will be attached to the meter by the server, to persist
  repeated Metadata metadata = 1;
}

message UnregisterMeterRequest {
  string id = 1;
  string tenant_id = 2;
}

message UnregisterMeterResponse {}

service MetersService {
  rpc RegisterMeter (RegisterMeterRequest) returns (RegisterMeterResponse);
  rpc UnregisterMeter (UnregisterMeterRequest) returns (UnregisterMeterResponse);
  // list / get metadata
}
